--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,4 +5,29 @@
     android:orientation="vertical"
     android:id="@+id/activity_login">
 
+    <TextView
+        android:id="@+id/inputIdnum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="17dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/textbox_purple"
+        android:text="(학번)"
+        android:textSize="15dp"
+        android:textColor="#919191"/>
+
+    <EditText
+        android:id="@+id/inputPW"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/textbox_purple"
+        android:padding="17dp"
+        android:text="(비밀번호)"
+        android:textSize="15dp"
+        android:textColor="#919191" />
 </LinearLayout>
