--- a/app/src/main/res/layout/promotion_main_screen.xml
+++ b/app/src/main/res/layout/promotion_main_screen.xml
@@ -41,9 +41,7 @@
             android:layout_column="0"
             android:layout_columnSpan="1"
             android:layout_width="180dp"
-            android:layout_height="280dp"
-            android:layout_margin="10dp"
-            app:srcCompat="@drawable/booth2" />
+            android:layout_height="280dp" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -53,8 +51,7 @@
             android:layout_column="1"
             android:layout_columnSpan="1"
             android:layout_margin="10dp"
-            android:background="@drawable/edge2"
-            app:srcCompat="@drawable/booth1" />
+            android:background="@drawable/edge2" />
 
 
     </GridLayout>
