--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,8 @@
         android:text="로그인"
         android:textColor="@color/white"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:clickable="true"/>
 
     <TextView
         android:id="@+id/login_join"
@@ -66,6 +67,7 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:text="회원가입"
-        android:textSize="10sp" />
+        android:textSize="10sp"
+        android:clickable="true"/>
 
 </LinearLayout>
