add(.java): Add btn listeners in SeeProfile page
*데이터베이스와 연결되는 부분 추가 구현 필요

--- a/app/src/main/res/layout/activity_seeprofile.xml
+++ b/app/src/main/res/layout/activity_seeprofile.xml
@@ -46,7 +46,7 @@
             tools:ignore="TextContrastCheck" />
 
         <TextView
-            android:id="@+id/user_id"
+            android:id="@+id/student_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
@@ -102,7 +102,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/changePW"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
@@ -154,7 +154,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/withdraw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
