--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_gray">#2B2B2B</color>
     <color name="gray">#FF808080</color>
+    <color name="red">#FF0000</color>
 </resources>
