--- a/app/src/main/res/layout/activity_addpromotion.xml
+++ b/app/src/main/res/layout/activity_addpromotion.xml
@@ -90,6 +90,13 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/savebutton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="저장하기"
+        android:backgroundTint="#EABADB"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="57dp"
