--- a/app/src/main/res/layout/activity_additem.xml
+++ b/app/src/main/res/layout/activity_additem.xml
@@ -46,71 +46,32 @@
             android:scaleType="fitXY"
             app:srcCompat="@drawable/camera"
             tools:ignore="SpeakableTextPresentCheck" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <EditText
+            android:id="@+id/item_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            app:boxStrokeColor="#BE88BB">
+            android:layout_height="48dp"
+            android:hint="상품 이름"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/item_name"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:gravity="clip_vertical"
-                android:hint="@string/item_name"
-                android:shadowColor="#BD87BB"
-                tools:ignore="TextContrastCheck" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <EditText
+            android:id="@+id/item_price"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            app:boxStrokeColor="#BE88BB">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/item_price"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:hint="@string/item_price"
-                tools:ignore="TextContrastCheck" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_height="48dp"
+            android:inputType="number"
+            android:hint="상품 가격"/>
+        <EditText
+            android:id="@+id/booth_location"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            app:boxStrokeColor="#BE88BB">
+            android:layout_height="48dp"
+            android:hint="부스 위치"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/booth_location"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:hint="@string/booth_location"
-                tools:ignore="TextContrastCheck" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <EditText
+            android:id="@+id/item_description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            app:boxStrokeColor="#BE88BB">
+            android:layout_height="48dp"
+            android:hint="상품 설명"
+            android:inputType="textMultiLine"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/item_description"
-                android:layout_width="match_parent"
-                android:layout_height="142dp"
-                android:gravity="top"
-                android:hint="@string/item_description"
-                android:inputType="textMultiLine"
-                tools:ignore="TextContrastCheck" />
-        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
