--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -24,7 +24,7 @@
                 android:layout_marginEnd="10dp"
                 android:textSize="15sp"
                 android:hint="@string/inputIdnum"
-                android:inputType="textPassword"
+                android:inputType="text"
                 android:padding="17dp"
                 android:textColor="#919191"
                 android:background="@drawable/textbox_purple"
