--- a/app/src/main/res/layout/activity_seeprofile.xml
+++ b/app/src/main/res/layout/activity_seeprofile.xml
@@ -116,14 +116,30 @@
                 android:text="@string/registerAdminBtn"
                 tools:ignore="TextContrastCheck" />
         </LinearLayout>
-
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/withdraw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/withdraw" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginStart="65dp"
+            android:text="@string/logout"/>
+
+        <TextView
+            android:id="@+id/withdraw"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="65dp"
+            android:text="@string/withdraw" />
+
+    </RelativeLayout>
+
+
 
 </LinearLayout>
