upload view pager

--- a/app/src/main/res/layout/promotion_main_screen.xml
+++ b/app/src/main/res/layout/promotion_main_screen.xml
@@ -5,29 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/sliderViewPager"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="240dp">
+
+        <LinearLayout
+            android:id="@+id/main_promotions"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal" />
 
 
     </androidx.viewpager2.widget.ViewPager2>
 
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        tools:srcCompat="@drawable/ex2" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingBottom="8dp">
-
-    </LinearLayout>
 
     <GridLayout
         android:layout_width="match_parent"
