--- a/app/src/main/res/layout/shopping_main_screen.xml
+++ b/app/src/main/res/layout/shopping_main_screen.xml
@@ -1,62 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:id="@+id/activity_goodsMain">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/putRecyclerView"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <GridLayout
-
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:orientation="vertical"
-        android:rowCount="2">
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="180dp"
-            android:layout_height="280dp"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_margin="5dp"
-            android:background="@drawable/buttonedge"
-            app:srcCompat="@drawable/ex1" />
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="180dp"
-            android:layout_height="280dp"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_margin="5dp"
-            android:background="@drawable/buttonedge2"
-            app:srcCompat="@drawable/ex1" />
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="180dp"
-            android:layout_height="280dp"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_margin="5dp"
-            android:background="@drawable/buttonedge"
-            app:srcCompat="@drawable/ex1" />
-
-        <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="180dp"
-            android:layout_height="280dp"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_margin="5dp"
-            android:background="@drawable/buttonedge2"
-            app:srcCompat="@drawable/ex1" />
-    </GridLayout>
-</LinearLayout>
-
-
-
+</androidx.constraintlayout.widget.ConstraintLayout>
