--- a/app/src/main/res/layout/promotion_main_screen.xml
+++ b/app/src/main/res/layout/promotion_main_screen.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!-- 임시 뷰페이저자리 -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="240dp"/>
+
+    <!-- 뷰페이저 부분
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/sliderViewPager"
         android:layout_width="match_parent"
@@ -20,33 +26,16 @@
 
 
     </androidx.viewpager2.widget.ViewPager2>
+    -->
 
-
-    <GridLayout
+    <!-- recyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/putRcv"
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnCount="2"
-        android:layout_marginTop="70dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <ImageView
-            android:background="@drawable/edge"
-            android:id="@+id/imageView5"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_columnSpan="1"
-            android:layout_width="180dp"
-            android:layout_height="280dp" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="180dp"
-            android:layout_height="280dp"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_columnSpan="1"
-            android:layout_margin="10dp"
-            android:background="@drawable/edge2" />
-
-
-    </GridLayout>
 </LinearLayout>
