--- a/app/src/main/res/layout/item_slider1.xml
+++ b/app/src/main/res/layout/item_slider1.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app = "http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="@dimen/frameSize">
 
-    <ImageButton
+    <ImageView
         android:id="@+id/main_promo1"
-        android:layout_width="380dp"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/frameSize"
-        android:background="@drawable/daedongdaedong1"
-        android:scaleType="centerCrop"
-        tools:ignore="MissingConstraints" />
+        android:src="@drawable/daedongdaedong1"
+        android:scaleType="fitXY" />
 
-</RelativeLayout>
+</FrameLayout>
