--- a/app/src/main/res/layout/activity_additem.xml
+++ b/app/src/main/res/layout/activity_additem.xml
@@ -46,99 +46,49 @@
             android:scaleType="fitXY"
             app:srcCompat="@drawable/camera"
             tools:ignore="SpeakableTextPresentCheck" />
+
         <EditText
             android:id="@+id/item_name"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="상품 이름"/>
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:hint="상품 이름"
+            android:singleLine="true" />
 
 
         <EditText
             android:id="@+id/item_price"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:hint="상품 가격"
             android:inputType="number"
-            android:hint="상품 가격"/>
+            android:singleLine="true" />
+
         <EditText
             android:id="@+id/booth_location"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="부스 위치"/>
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:hint="부스 위치"
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/item_description"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="0dp"
+            android:layout_weight="5"
             android:hint="상품 설명"
-            android:inputType="textMultiLine"/>
+            android:inputType="textMultiLine" />
+
+        <Button
+            android:id="@+id/savebutton2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#EABADB"
+            android:text="저장하기" />
 
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_gravity="bottom"
-        android:background="@drawable/bottom_color"
-        android:gravity="center"
-        android:minHeight="?attr/actionBarSize"
-        android:paddingVertical="5dp"
-        android:theme="?attr/actionBarTheme">
-
-        <ImageButton
-            android:id="@+id/promotionBtn"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="40dp"
-            android:background="@null"
-            android:contentDescription="@string/promotionBtn"
-            android:paddingHorizontal="10dp"
-            android:scaleType="fitXY"
-            android:screenReaderFocusable="false"
-            android:src="@drawable/promotion"
-            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck" />
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="2dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@color/white" />
-
-        <ImageButton
-            android:id="@+id/shopBtn"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="40dp"
-            android:background="@null"
-            android:contentDescription="@string/shopBtn"
-            android:paddingHorizontal="10dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/shop"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="2dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@color/white" />
-
-        <ImageButton
-            android:id="@+id/profileBtn"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-
-            android:layout_marginHorizontal="40dp"
-            android:background="@null"
-            android:contentDescription="@string/profileBtn"
-            android:paddingHorizontal="10dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/profile"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />
     </LinearLayout>
 
 </LinearLayout>
