--- a/app/src/main/res/layout/activity_addpromotion.xml
+++ b/app/src/main/res/layout/activity_addpromotion.xml
@@ -28,120 +28,71 @@
         </TextView>
     </androidx.appcompat.widget.Toolbar>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="508dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginVertical="20dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <ImageButton
-            android:id="@+id/selectImageBtn"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/white"
-            android:contentDescription="@string/camera"
-            android:padding="5dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/camera"
-            tools:ignore="SpeakableTextPresentCheck" />
-
-        <EditText
-            android:id="@+id/booth_name"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint = "부스 이름" />
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="20dp"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/booth_location"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="부스 위치"/>
+            <ImageButton
+                android:id="@+id/selectImageBtn"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/white"
+                android:contentDescription="@string/camera"
+                android:padding="5dp"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/camera"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <EditText
+                android:id="@+id/booth_name"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="부스 이름" />
 
 
+            <EditText
+                android:id="@+id/booth_location"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="부스 위치" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="235dp"
-            android:layout_marginVertical="10dp"
-            android:contentDescription="@string/mapImage"
-            app:srcCompat="@drawable/location" />
+            <EditText
+                android:id="@+id/booth_time"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="부스 시간" />
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/booth"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="부스 설명 "
+                android:inputType="textMultiLine" />
 
-    <Button
-        android:id="@+id/savebutton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="저장하기"
-        android:backgroundTint="#EABADB"/>
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="256dp"
+                android:layout_marginVertical="10dp"
+                android:contentDescription="@string/mapImage"
+                app:srcCompat="@drawable/location" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_gravity="bottom"
-        android:background="@drawable/bottom_color"
-        android:gravity="center"
-        android:minHeight="?attr/actionBarSize"
-        android:paddingVertical="5dp"
-        android:theme="?attr/actionBarTheme">
+            <Button
+                android:id="@+id/savebutton"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:backgroundTint="#EABADB"
+                android:text="저장하기" />
 
-        <ImageButton
-            android:id="@+id/promotionBtn"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="40dp"
-            android:background="@null"
-            android:contentDescription="@string/promotionBtn"
-            android:paddingHorizontal="10dp"
-            android:scaleType="fitXY"
-            android:screenReaderFocusable="false"
-            android:src="@drawable/promotion"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="2dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@color/white" />
-
-        <ImageButton
-            android:id="@+id/shopBtn"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="40dp"
-            android:background="@null"
-            android:contentDescription="@string/shopBtn"
-            android:paddingHorizontal="10dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/shop"
-            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck" />
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="2dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@color/white" />
-
-        <ImageButton
-            android:id="@+id/profileBtn"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-
-            android:layout_marginHorizontal="40dp"
-            android:background="@null"
-            android:contentDescription="@string/profileBtn"
-            android:paddingHorizontal="10dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/profile"
-            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck" />
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
