--- a/app/src/main/res/layout/activity_additem.xml
+++ b/app/src/main/res/layout/activity_additem.xml
@@ -30,7 +30,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="510dp"
+        android:layout_height="450dp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="20dp"
         android:orientation="vertical">
@@ -50,7 +50,8 @@
             android:id="@+id/item_name"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:hint="상품 이름"/>
+            android:hint="상품 이름"
+            android:privateImeOptions="defaultInputmode=korean"/>
 
 
         <EditText
@@ -63,82 +64,25 @@
             android:id="@+id/booth_location"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:hint="부스 위치"/>
+            android:hint="부스 위치"
+            android:privateImeOptions="defaultInputmode=korean"/>
 
         <EditText
             android:id="@+id/item_description"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:hint="상품 설명"
-            android:inputType="textMultiLine"/>
+            android:inputType="textMultiLine"
+            android:privateImeOptions="defaultInputmode=korean"/>
 
 
     </LinearLayout>
 
-    <LinearLayout
+    <Button
+        android:id="@+id/savebutton"
         android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_gravity="bottom"
-        android:background="@drawable/bottom_color"
-        android:gravity="center"
-        android:minHeight="?attr/actionBarSize"
-        android:paddingVertical="5dp"
-        android:theme="?attr/actionBarTheme">
-
-        <ImageButton
-            android:id="@+id/promotionBtn"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="40dp"
-            android:background="@null"
-            android:contentDescription="@string/promotionBtn"
-            android:paddingHorizontal="10dp"
-            android:scaleType="fitXY"
-            android:screenReaderFocusable="false"
-            android:src="@drawable/promotion"
-            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck" />
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="2dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@color/white" />
-
-        <ImageButton
-            android:id="@+id/shopBtn"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="40dp"
-            android:background="@null"
-            android:contentDescription="@string/shopBtn"
-            android:paddingHorizontal="10dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/shop"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="2dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@color/white" />
-
-        <ImageButton
-            android:id="@+id/profileBtn"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-
-            android:layout_marginHorizontal="40dp"
-            android:background="@null"
-            android:contentDescription="@string/profileBtn"
-            android:paddingHorizontal="10dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/profile"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />
-    </LinearLayout>
+        android:layout_height="48dp"
+        android:backgroundTint="#EABADB"
+        android:text="저장하기" />
 
 </LinearLayout>
