feat(root): Implement sold-out goods update
* 상품 목록 관리 프래그먼트에서 품절 텍스트 클릭시,
	- 해당 goods DB의 isSoldOut 속성 수정
	- 사용자에게 빨간색(품절)/회색(재고 있음)으로 알려줌

--- a/app/src/main/res/layout/layout_listview.xml
+++ b/app/src/main/res/layout/layout_listview.xml
@@ -28,8 +28,9 @@
                 android:id="@+id/isSoldOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10sp"
                 android:layout_marginEnd="10sp"
+                android:background="@android:color/transparent"
+                android:padding="10sp"
                 android:text="@string/soldout"
                 android:textSize="16sp" />
 
