--- a/app/src/main/res/layout/activity_managegoods.xml
+++ b/app/src/main/res/layout/activity_managegoods.xml
@@ -22,15 +22,17 @@
         android:layout_weight="1">
 
         <EditText
+            android:id="@+id/searchTxt"
             android:layout_width="160sp"
             android:layout_height="40sp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
-            android:textSize="15sp"
             android:singleLine="true"
+            android:textSize="15sp"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
         <ImageButton
+            android:id="@+id/searchBtn"
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:layout_marginTop="2.5dp"
