상품등록, 부스등록 설명칸 수정 (내부스크롤가능), 레이아웃 수정

--- a/app/src/main/res/layout/activity_additem.xml
+++ b/app/src/main/res/layout/activity_additem.xml
@@ -28,61 +28,69 @@
         </TextView>
     </androidx.appcompat.widget.Toolbar>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginVertical="20dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <ImageButton
-            android:id="@+id/selectImageBtn"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/white"
-            android:contentDescription="@string/camera"
-            android:padding="5dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/camera"
-            tools:ignore="SpeakableTextPresentCheck" />
-        <EditText
-            android:id="@+id/item_name"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="상품 이름"
-            android:privateImeOptions="defaultInputmode=korean"/>
+            android:layout_height="450dp"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="20dp"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/selectImageBtn"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/white"
+                android:contentDescription="@string/camera"
+                android:padding="5dp"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/camera"
+                tools:ignore="SpeakableTextPresentCheck" />
+            <EditText
+                android:id="@+id/item_name"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="상품 이름"
+                android:privateImeOptions="defaultInputmode=korean"/>
 
 
-        <EditText
-            android:id="@+id/item_price"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:inputType="number"
-            android:hint="상품 가격"/>
-        <EditText
-            android:id="@+id/booth_location"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="부스 위치"
-            android:privateImeOptions="defaultInputmode=korean"/>
+            <EditText
+                android:id="@+id/item_price"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:inputType="number"
+                android:hint="상품 가격"/>
+            <EditText
+                android:id="@+id/booth_location"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="부스 위치"
+                android:privateImeOptions="defaultInputmode=korean"/>
 
-        <EditText
-            android:id="@+id/item_description"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="상품 설명"
-            android:inputType="textMultiLine"
-            android:privateImeOptions="defaultInputmode=korean"/>
+            <EditText
+                android:id="@+id/item_description"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:gravity="top"
+                android:padding="5dp"
+                android:hint="상품 설명"
+                android:inputType="textMultiLine"
+                android:background="@drawable/memo_box"
+                android:privateImeOptions="defaultInputmode=korean"
+                android:scrollbars="vertical"/>
 
+            <Button
+                android:id="@+id/savebutton"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginBottom="30dp"
+                android:backgroundTint="#EABADB"
+                android:text="저장하기" />
+        </LinearLayout>
 
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/savebutton"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:backgroundTint="#EABADB"
-        android:text="저장하기" />
-
+    </ScrollView>
 </LinearLayout>
