--- a/app/src/main/res/layout/activity_goodsdetailed.xml
+++ b/app/src/main/res/layout/activity_goodsdetailed.xml
@@ -73,7 +73,9 @@
                 android:id="@+id/goods_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_margin="10dp"
+                android:padding="10dp"
+                android:textColor="@color/black"
                 android:background="@drawable/textbox_pink"/>
 
 <!--            <ImageView-->
